--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "file_search"
-version = "1.0.1"
-authors = ["Regt"]
+version = "1.1.2"
+authors = ["RegtLu"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
